--- a/app/src/main/res/drawable/background_circle1.xml
+++ b/app/src/main/res/drawable/background_circle1.xml
@@ -14,7 +14,7 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:right="-50dp">
-    <shape xmlns:android="http://schemas.android.com/apk/res/android"
+    <shape 
         android:shape="oval"
         android:useLevel="false">
         <size
