--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,14 +3,15 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <variable name="viewmodel" type="com.client.traveller.ui.auth.AuthViewModel"/>
+        <variable name="ViewModel" type="com.client.traveller.ui.auth.AuthViewModel"/>
     </data>
 
     <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/root_layout"
-                    tools:context=".ui.auth.LoginActivity">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/root_layout"
+            tools:context="com.client.traveller.ui.auth.LoginActivity"
+    >
 
         <RelativeLayout
                 android:layout_width="match_parent"
@@ -25,12 +26,12 @@
 
                 <ImageView
                         android:id="@+id/travl"
-                        android:layout_width="300dp"
-                        android:layout_height="100dp"
+                        android:layout_width="281dp"
+                        android:layout_height="82dp"
                         android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginBottom="30dp"
+                        android:layout_marginBottom="60dp"
                         android:background="@drawable/logo"
-                        android:textColor="#000000"
+                        android:contentDescription="TODO" android:textColor="#000000"
                         android:textSize="50sp"
                         android:textStyle="bold"/>
 
@@ -58,9 +59,9 @@
             <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true">
-                <com.client.traveller.ui.customfonts.EditText_Poppins_Regular
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true">
+                <EditText
                         android:id="@+id/Email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -72,16 +73,16 @@
                         android:textCursorDrawable="@drawable/cursor_color"
                         android:layout_marginRight="20dp"
                         android:layout_marginTop="50dp"
-                        android:inputType="text"
+                        android:inputType="textEmailAddress"
                         android:paddingTop="15dp"
                         android:paddingBottom="15dp"
                         android:textSize="15sp"
-                        android:text="@={viewmodel.email}"
-                        android:textColorHint="@color/colorPrimary"
-                        android:textColor="@color/colorPrimary"
-                />
+                        android:text="@={ViewModel.email}"
+                        android:textColorHint="@color/colorDark"
+                        android:textColor="@color/colorDark"
+                      />
 
-                <com.client.traveller.ui.customfonts.EditText_Poppins_Regular
+                <EditText
                         android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -97,14 +98,14 @@
                         android:paddingBottom="15dp"
                         android:textSize="15sp"
                         android:background="@drawable/background_gradient2"
-                        android:text="@={viewmodel.password}"
-                        android:textColorHint="@color/colorPrimary"
-                        android:textColor="@color/colorPrimary"
+                        android:text="@={ViewModel.password}"
+                        android:textColorHint="@color/colorDark"
+                        android:textColor="@color/colorDark"
                 />
 
 
 
-                <com.client.traveller.ui.customfonts.Button_Poppins_Regular
+                <Button
                         android:id="@+id/assistant_apply"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -118,17 +119,18 @@
                         android:textCursorDrawable="@drawable/sky_blue_cursor_color"
                         android:textColor="#FFFFFF"
                         android:textSize="15sp"
-                        android:background="@drawable/background_gradient"
-                        android:onClick="@{viewmodel::onLoginButtonClick}"/>
 
-                <com.client.traveller.ui.customfonts.MyTextView_Poppins_Regular
+                        android:onClick="@{ViewModel::onLoginButtonClick}"/>
+
+                <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/no_account"
                         android:layout_below="@id/assistant_apply"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="30dp"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/colorDark"
+                        android:onClick="@{ViewModel::toRegister}"
                 />
             </RelativeLayout>
 
@@ -147,7 +149,7 @@
                         android:orientation="horizontal">
 
 
-                    <com.client.traveller.ui.customfonts.MyTextView_Poppins_Regular
+                    <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="13.3sp"
