--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#455a64</color>
-    <color name="colorPrimaryDark">#1c313a</color>
-    <color name="colorAccent">#718792</color>
+    <color name="colorPrimary">#7c4dff</color>
+    <color name="colorPrimaryLight">#b47cff</color>
+    <color name="colorPrimaryDark">#3f1dcb</color>
+    <color name="colorSecondary">#303f9f</color>
+    <color name="colorSecondaryLight">#666ad1</color>
+    <color name="colorSecondaryDark">#001970</color>
+    <color name="colorWhiteMaterial">#fafafa</color>
+    <color name="colorWhiteLightMaterial">#ffffff</color>
+    <color name="colorWhiteDarkMaterial">#f5f5f5</color>
+    <color name="colorDark">#212121</color>
 </resources>
