--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android">
-    <data>
-        <variable name="ViewModel" type="com.client.traveller.ui.auth.AuthViewModel"/>
-    </data>
-
-    <RelativeLayout
+<RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/root_layout"
             tools:context="com.client.traveller.ui.auth.LoginActivity"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
         <RelativeLayout
@@ -61,8 +56,9 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true">
+
                 <EditText
-                        android:id="@+id/Email"
+                        android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/email"
@@ -77,7 +73,6 @@
                         android:paddingTop="15dp"
                         android:paddingBottom="15dp"
                         android:textSize="15sp"
-                        android:text="@={ViewModel.email}"
                         android:textColorHint="@color/colorDark"
                         android:textColor="@color/colorDark"
                       />
@@ -88,7 +83,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/password"
                         android:layout_marginBottom="10dp"
-                        android:layout_below="@+id/Email"
+                        android:layout_below="@+id/email"
                         android:textCursorDrawable="@drawable/sky_blue_cursor_color"
                         android:inputType="textPassword"
                         android:gravity="center"
@@ -98,7 +93,6 @@
                         android:paddingBottom="15dp"
                         android:textSize="15sp"
                         android:background="@drawable/background_gradient2"
-                        android:text="@={ViewModel.password}"
                         android:textColorHint="@color/colorDark"
                         android:textColor="@color/colorDark"
                 />
@@ -119,8 +113,9 @@
                         android:textCursorDrawable="@drawable/sky_blue_cursor_color"
                         android:textColor="#FFFFFF"
                         android:textSize="15sp"
-
-                        android:onClick="@{ViewModel::onLoginButtonClick}"/>
+                        android:background="@color/colorPrimary"
+                        android:onClick="onLoginButtonClick"
+                />
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -130,7 +125,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="30dp"
                         android:textColor="@color/colorDark"
-                        android:onClick="@{ViewModel::toRegister}"
+                        android:onClick="toRegister"
                 />
             </RelativeLayout>
 
@@ -203,15 +198,13 @@
 
         </RelativeLayout>
 
-        <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                android:id="@+id/progress_bar"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-        />
+    <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:id="@+id/progress_bar"
+            android:layout_centerInParent="true"
+            />
 
     </RelativeLayout>
-</layout>
 
