--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -8,7 +8,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <fragment
-            android:id="@+id/nav_host_fragment"
+            android:id="@+id/nav_host_fragment_auth"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -18,7 +18,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
 
             app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph" />
+            app:navGraph="@navigation/nav_graph_auth" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
