--- a/app/src/main/res/layout/progress_bar.xml
+++ b/app/src/main/res/layout/progress_bar.xml
@@ -8,7 +8,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#50000000"
-            android:id="@+id/progress_bar_background"
+            android:id="@+id/progress_bar"
             android:visibility="invisible"
             >
         <LinearLayout
