--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,7 +10,7 @@
             android:id="@+id/login_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#F6F6F6">
+            android:background="@color/colorWhiteDarkMaterial">
 
         <FrameLayout
                 android:id="@+id/fm1"
