--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -14,16 +14,21 @@
               android:id="@+id/ustawienia_item"
               android:icon="@drawable/ic_ustawienia"
         />
-        <item android:title="@string/tworca"
-              android:id="@+id/tworca_item"
-              android:icon="@drawable/ic_autor"
-        />
         <item
                 android:title="@string/profile"
                 android:id="@+id/profile"
                 android:icon="@drawable/ic_person"
                 />
 
+    </group>
+    <group
+        android:id="@+id/group_3"
+        >
+        <item
+                android:title="@string/trips_title_menu"
+                android:id="@+id/trips"
+                android:icon="@drawable/ic_trips_icon"
+                />
     </group>
     <group
         android:id="@+id/group_2"
