Aktualizacja klasy MapUtils Aktualizacja klasy LocationProviderImpl

--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -8,7 +8,7 @@
         android:orientation="vertical"
         android:fitsSystemWindows="true"
         android:background="@color/colorPrimary"
-        tools:context=".ui.trips.TripActivity">
+        tools:context=".ui.trip.TripActivity">
 
     <LinearLayout
             android:layout_width="match_parent"
