--- a/app/src/main/res/layout/fragment_trip_creator.xml
+++ b/app/src/main/res/layout/fragment_trip_creator.xml
@@ -5,7 +5,7 @@
         android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
-        tools:context=".ui.trips.TripCreatorFragment"
+        tools:context=".ui.trip.TripCreatorFragment"
         android:background="@color/colorWhiteDarkMaterial"
         >
 
