--- a/app/src/main/res/layout/fragment_trip_list.xml
+++ b/app/src/main/res/layout/fragment_trip_list.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ui.trips.TripListFragment"
+        tools:context=".ui.trip.TripListFragment"
         android:background="@color/colorWhiteDarkMaterial"
         >
 
