Zmiana biblioteki recycler View ( wersja beta powodowała problemy na ekranie ustawień) Dodanie podglądu wycieczek Aktualizacja encji Trip Poprawki w kodzie i zabezpieczenia przed wyjątkami

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorDark">#212121</color>
     <color name="grey">#E0E0E0</color>
     <color name="transparent">#00000000</color>
+    <color name="whiteTransparent">#BFFFFFFF</color>
 </resources>
