--- a/app/src/main/res/drawable/my_location_button.xml
+++ b/app/src/main/res/drawable/my_location_button.xml
@@ -2,15 +2,19 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape
-
+            android:shape="rectangle"
 
             >
             <corners android:radius="2dp" />
-            <solid android:color="@color/whiteTransparent" />
+            <solid android:color="@color/colorWhiteDarkMaterial" />
         </shape>
     </item>
     <item
-        android:drawable="@drawable/my_location_button"
+        android:drawable="@drawable/ic_my_location"
+        android:bottom="3dp"
+        android:top="3dp"
+        android:right="3dp"
+        android:left="3dp"
         >
     </item>
 </layer-list>
