--- a/app/src/main/res/layout/trip_creator_edit_form.xml
+++ b/app/src/main/res/layout/trip_creator_edit_form.xml
@@ -33,7 +33,7 @@
             android:background="@color/transparent"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-
+            android:layout_marginEnd="10dp"
             />
 
 </RelativeLayout>
