--- a/app/src/main/res/navigation/nav_graph_trip.xml
+++ b/app/src/main/res/navigation/nav_graph_trip.xml
@@ -13,6 +13,11 @@
         <action
                 android:id="@+id/action_tripCreatorFragment_to_tripListFragment"
                 app:destination="@id/tripListFragment" />
+        <argument
+            android:name="trip"
+            app:argType="com.client.traveller.data.db.entities.Trip"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
             android:id="@+id/tripListFragment"
