Naprawa wyświetlania profilu z innej aktywności niż homeActivity Dodanie wyświetlania użytkowników aktulanej wycieczki w ChatActivity Naprawa działania do dołączania do wycieczek Naprawa statusów wycieczek

--- a/app/src/main/res/layout/fragment_trip_users.xml
+++ b/app/src/main/res/layout/fragment_trip_users.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhiteLightMaterial"
-    tools:context=".ui.chat.TripUsersFragment">
+    android:id="@+id/pull_to_refresh_layout"
+    android:background="@color/colorWhiteDarkMaterial"
+    tools:context=".ui.chat.usersList.TripUsersFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/recycler_view" />
 
-</FrameLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
