--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhiteLightMaterial"
-    tools:context=".ui.chat.ChatFragment">
+    tools:context=".ui.chat.messeages.ChatFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
