--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -31,16 +31,6 @@
                 app:iconSpaceReserved="false"
         />
 
-        <SwitchPreference
-                android:key="CAMERA_TRACKING"
-                android:title="@string/camera_tracking_title"
-                android:summary="@string/camera_tracking_description"
-                android:defaultValue="true"
-                android:checked="true"
-                android:disableDependentsState="true"
-                app:iconSpaceReserved="false"
-        />
-
         <ListPreference
                 android:key="SENDING_DATA_INTERVAL"
                 android:title="@string/interval_send_data"
@@ -53,7 +43,26 @@
                 android:defaultValue="2"
                 />
 
+        <SwitchPreference
+            android:key="CAMERA_TRACKING"
+            android:title="@string/camera_tracking_title"
+            android:summary="@string/camera_tracking_description"
+            android:defaultValue="true"
+            android:checked="true"
+            android:disableDependentsState="true"
+            app:iconSpaceReserved="false"
+            />
 
+        <ListPreference
+            android:key="TRAVEL_MODE"
+            android:title="@string/travel_mode"
+            android:summary="%s"
+            app:iconSpaceReserved="false"
+            android:disableDependentsState="true"
+            android:entries="@array/travel_modes_keys"
+            android:entryValues="@array/travel_modes_values"
+            android:defaultValue="driving"
+        />
 
     </PreferenceCategory>
 
