--- a/app/src/main/res/layout/activity_nearby_places.xml
+++ b/app/src/main/res/layout/activity_nearby_places.xml
@@ -38,7 +38,7 @@
             app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
             app:navGraph="@navigation/nav_graph_nearby_places" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
