--- a/app/src/main/res/navigation/nav_graph_nearby_places.xml
+++ b/app/src/main/res/navigation/nav_graph_nearby_places.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nearbyPlacesMainFragment"
-        android:name="com.client.traveller.ui.nearby.NearbyPlacesMainFragment"
+        android:name="com.client.traveller.ui.nearby.mainFragment.NearbyPlacesMainFragment"
         android:label="fragment_nearby_places_main"
         tools:layout="@layout/fragment_nearby_places_main" />
 </navigation>
