Dodanie filtrowania miejsc po typie i po wpisanym tekście Dodanie fragmentu który będzie wyświetlał szczegóły miejsca

--- a/app/src/main/res/drawable/my_location_button_background.xml
+++ b/app/src/main/res/drawable/my_location_button_background.xml
@@ -6,7 +6,7 @@
 
             >
             <corners android:radius="2dp" />
-            <solid android:color="@color/whiteTransparent" />
+            <solid android:color="@color/whiteTransparent75" />
         </shape>
     </item>
     <item
