--- a/app/src/main/res/layout/item_nearby_place.xml
+++ b/app/src/main/res/layout/item_nearby_place.xml
@@ -21,62 +21,71 @@
             android:contentDescription="place_photo" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:padding="10dp"
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/whiteTransparent"
-            android:id="@+id/content"
-            >
+            android:background="@color/whiteTransparent55"
+            android:padding="10dp">
 
             <ImageView
+                android:id="@+id/icon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:id="@+id/icon"
+                app:layout_constraintBottom_toBottomOf="@id/name"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="@id/name" />
 
             <TextView
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
                 android:layout_margin="10dp"
                 android:text="namenamenamename"
+                android:textColor="@color/colorDark"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toRightOf="@id/icon"
-                app:layout_constraintTop_toTopOf="@id/icon"
-                app:layout_constraintBottom_toBottomOf="@id/icon"
-                />
+                app:layout_constraintRight_toLeftOf="@id/status"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/status"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="adres"
-                app:layout_constraintTop_toBottomOf="@id/icon"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_margin="10dp"
-                />
+                android:text="adres"
+                android:textColor="@color/colorDark"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/icon" />
 
             <TextView
                 android:id="@+id/types"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Typ: pierwsza, drugi, itd"
-                app:layout_constraintBottom_toTopOf="@id/rating"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_margin="10dp"
-                />
+                android:text="Typ: pierwsza, drugi, itd"
+                android:textColor="@color/colorDark"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/rating"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
             <androidx.appcompat.widget.AppCompatRatingBar
                 android:id="@+id/rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:numStars="5"
-                />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
